Added models and identity

--- a/BeastTuners/appsettings.json
+++ b/BeastTuners/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BeastTunersContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BeastTuners;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
